@@ -7,6 +7,13 @@
 
 2013-10-10  Sebastian Huber <sebastian.huber@embedded-brains.de>
 
+	* libc/sys/rtems/machine/_types.h (__dev_t): Define.
+	(__dev_t_defined) Likewise.
+	* libc/include/sys/_types.h (__dev_t): Delete RTEMS specific
+	definition.
+
+2013-10-10  Sebastian Huber <sebastian.huber@embedded-brains.de>
+
 	* libc/sys/rtems/machine/_types.h (_ssize_t): Delete.
 	(__ssize_t_defined) Likewise.
 
